// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logger formatting error types outputs message and stack 1`] = `
Array [
  "[0000-00-00 00:00:00] [ERROR]   This is the error message
[0000-00-00 00:00:00] [ERROR]   MockError: This is the error message
[0000-00-00 00:00:00] [ERROR]       at Object.test (ansi-logger-js/src/__tests__/logger.ts:0:0)
[0000-00-00 00:00:00] [ERROR]       at .... Mocked jest call stack",
]
`;

exports[`Logger json complex types output 1`] = `
Array [
  "{\\"group\\":\\"json\\",\\"levelNumeric\\":32,\\"levelText\\":\\"DEBUG\\",\\"message\\":{\\"host\\":\\"localhost\\",\\"name\\":\\"test\\",\\"pass\\":\\"test\\",\\"user\\":\\"test\\"},\\"timestamp\\":\\"0000-00-00 00:00:00\\"}",
]
`;

exports[`Logger multiline output get meta prefix prepended on each line 1`] = `
Array [
  "[0000-00-00 00:00:00] [INFO]
[0000-00-00 00:00:00] [INFO]                multiline
[0000-00-00 00:00:00] [INFO]                text is outputted
[0000-00-00 00:00:00] [INFO]                correctly",
]
`;

exports[`Logger text complex types output 1`] = `
Array [
  "[0000-00-00 00:00:00] [json] [DEBUG]   {
[0000-00-00 00:00:00] [json] [DEBUG]     host: 'localhost'
[0000-00-00 00:00:00] [json] [DEBUG]     name: 'test'
[0000-00-00 00:00:00] [json] [DEBUG]     pass: 'test'
[0000-00-00 00:00:00] [json] [DEBUG]     user: 'test'
[0000-00-00 00:00:00] [json] [DEBUG]   }",
]
`;

exports[`Logger when logger has a group it is outputted in meta prefix 1`] = `
Array [
  "[0000-00-00 00:00:00] [GROUP] [INFO]    info text",
]
`;
